--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <h1
       class="text-white text-center m-16 font-black underline decoration-pink-500 text-6xl"
     >
-      ¡EL PROYECTO!
+      ¡PROYECTO!
       <span class="font-normal">ʕ•́ᴥ•̀ʔっ</span>
     </h1>
   </body>
