--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <h1
       class="text-white text-center m-16 font-black underline decoration-pink-500 text-6xl"
     >
+      <h1>chao </h1>
  daniel
       ¡EL PROYECTO 2.0!
 
